# ClasificadorDeFrutas

./: 1.py  README.md  entrenar.py  grafica.py  modelo.pkl  modelo_tensorflow.keras  modelo_tensorflowv2.keras  tensor.py  utils.py
datos_iniciales/: RGB.csv  cebolla.csv  limones.csv  manzana.csv  zanahoria.csv
entrenamiento/: entrenar.py  tensor.py
interfaz/: Cargo.toml
interfaz/src/: interfaz.rs  leer.rs  main.rs  python.rs  serial.rs
obtencion/: cebolla.csv  graficar.py  leer.py  limon.csv  manzana.csv  manzana.csv.csv  platformio.ini  zanahoria.csv
obtencion/src/: main.cpp
prediccion/: conneccion.py  conneccion_tensorflow.py
