[package]
name = "interfaz"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
serialport = "4.6.0"
tokio-serial = "5.4.4"
tokio = { version = "1", features = ["full"] }
egui_extras = "0.29.1"
egui_dock = "0.14.0"
egui-plotter = { git = "https://github.com/oligamiq/egui-plotter"}
plotters = "0.3.7"
