[package]
name = "interfaz"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
serialport = "4.6.0"
egui_extras = "0.29.1"
egui_dock = "0.14.0"
egui-plotter = { git = "https://github.com/oligamiq/egui-plotter"}
plotters = "0.3.7"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.23.1", features = ["auto-initialize"] }
